--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "rxjs": "^5.5.6",
+    "socket.io": "^2.0.4",
     "style-loader": "^0.20.2",
     "ts-loader": "^3.5.0",
     "typescript": "^2.7.2",
